--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <br>
                 <br>
                 <br>
-                <br>
+                
                 <script type="text/javascript">
                     var clicks = 0;
                     function onClick() {
@@ -48,7 +48,9 @@
                     <button type="button" onClick="onClick()">Like</button>
                     <p>Total Likes: <a id="clicks">0</a></p>
                     <p><i>Want to Share Tech news and give Feedback:</i></p>
-                    <a href="feedback.html"><button>Click Here</button></a>
+                    <a href="feedback.html"><button>Give Feedback</button></a>
+                    <p><i>I would love to make your website for FREE! <b>Go Register</b>:</i></p>
+                    <a href="register.html"><button>Register</button></a>
             </div>
     </header>
     <!header ends>
@@ -271,7 +273,7 @@
                                                                 <h2>Follow Me</h2>
                                                             </div>
                                                             <div class="right_sub_div d-flex justify-content-around">
-                                                                <a href="#">
+                                                                <a href="https://www.instagram.com/iamyashrajshukla/?hl=en">
                                                                     <img alt="Qries" src="download (5).jpg" width=50"
                                                                         height="50">
                                                                 </a>
